<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20sp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/location_header"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outdoor_location"
            android:textColor="@color/primaryGrey"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outdoorDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ex. Platform 4, Northbound">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/outdoorDetails"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:gravity="top|start"
                android:background="@drawable/input_rounded_corners" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_weight="1"
            android:text="@string/outdoor_description" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/outdoor_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/muli_semibold"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline56"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="22dp" />
</LinearLayout>