<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/moving_location"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/moving_description"
            android:textColor="@color/primaryGrey"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/bus_or_train"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/busTrainNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Ex: 43">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/busTrainNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@drawable/input_rounded_corners"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/highway_exit_number"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/highwayExitNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Ex: 280">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/highwayExitNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@drawable/input_rounded_corners" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/moving_skip"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/guideline54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/moving_continue"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline53"
                app:layout_constraintStart_toStartOf="@+id/guideline54"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="1.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="22dp" />

</LinearLayout>