<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/indoor_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/indoor_description"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/apt_option"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/roomNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Ex. 7B">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/roomNumber"
                style="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:background="@drawable/input_rounded_corners"
                android:fontFamily="@font/muli"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/floor_option"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/floorNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Ex. 22">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/floorNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@drawable/input_rounded_corners"
                android:fontFamily="@font/muli"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/indoor_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/muli_semibold"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline51"
            app:layout_constraintStart_toStartOf="@+id/guideline52"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dismiss"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2991914" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="22dp" />

</LinearLayout>


