<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeaponsActivity">


    <TextView
        android:id="@+id/weapons_header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/weapons_header"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline11"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <Button
        android:id="@+id/backButton2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/baseline_arrow_back_ios_24"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/accessRED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/muli_black"
        android:text="2 of 4"
        android:textColor="@color/accessRED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="8dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <View
            android:id="@+id/view6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:alpha="0.25"
            android:background="@color/accessRED" />

        <View
            android:id="@+id/view24"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/accessRED" />

        <View
            android:id="@+id/view25"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:alpha="0.25"
            android:background="@color/accessRED" />

        <View
            android:id="@+id/view26"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:alpha="0.25"
            android:background="@color/accessRED" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10123119" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <Button
        android:id="@+id/button_continue3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/unselected_btn"
        android:fontFamily="@font/muli_semibold"
        android:text="@string/cont"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weapons_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/muli_bold"
        android:foregroundTint="#FFFFFF"
        android:text="Weapons"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:id="@+id/radioGroup"
        app:layout_constraintEnd_toStartOf="@+id/guideline32"
        app:layout_constraintStart_toStartOf="@+id/guideline47"
        app:layout_constraintTop_toBottomOf="@+id/weapons_header">

        <RadioButton
            android:id="@+id/yesBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:text="@string/yes"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/muli_semibold"
            android:textSize="20sp"
            android:checked="false"
            android:textColor="@drawable/radio_button_background"/>

        <RadioButton
            android:id="@+id/noBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:text="@string/no"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/muli_semibold"
            android:textSize="20sp"
            android:checked="false"
            android:textColor="@drawable/radio_button_background"/>

        <RadioButton
            android:id="@+id/maybeBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:text="@string/not_sure"
            android:textAlignment="center"
            android:fontFamily="@font/muli_semibold"
            android:textSize="20sp"
            android:checked="false"
            android:textColor="@drawable/radio_button_background"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="181dp"
        android:orientation="horizontal"
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>